asampl.ebnf
prog = {handler_decl}, {library_decl}, {var_or_func_decl};

handler_decl = "handler", id, "from", file_name;

library_decl = "library", id, "from", file_name;

var_or_func_decl = var_decl | func_decl;

var_decl = var_dev_without_init | var_dev_with_init;
var_decl_without_init = "let", id, ";";
var_decl_with_init = "let", id, "=", data, ";";
data = expr
   | arr_init;
arr_init = "{", [arg_list], "}";
arg_list = expr, [",", arg_list];

func_decl = "fn", id, "(", [param_list], ")", block_st;
param_list = id, [",", param_list];

block_st = "{", {st}, "}";

st = expr_st
   | block_st
   | select_st
   | iter_st
   | match_st
   | timeline_st
   | download_st
   | updload_st
   | jump_st;

expr_st = [expr], ";";
block_st = "{", {var_decl}, {st}, "}";
select_st = "if", "(", expr, ")", st, ["else", st];
iter_st = "while", "(", expr, ")", st;

match_st = "match", expr, "{", [case_list], [def_case], "}";
case_list = match_list, "->", st, [case_list];
match_list = expr, ["|", match_list];
def_case = "def", "->", st;

timeline_st = "timeline", obj, func;

obj = expr | obj_decl;
obj_decl = "{", [fld_list], "}";
fld_list = expr, ":", expr, [',', fld_list];

func = expr | lambda;
lambda = "|", [param_list], "|", block_st;

download_st = "download", expr, "from", expr, "with", expr;
updload_st = "upload", expr, "to", expr, "with", expr;

jump_st = ("continue" | "break" | "return", [expr]), ";";

expr = assign;

assign = ternary, assign_ap;
assign_ap = assign_op, ternary, assign_ap | none;
assign_op = "=" | "+=" | "-=" | "*=" | "/=" | "%=" | "<<=" | ">>=" | "&=" | "|=" | "^=";

ternary = log_or "|" log_or "?" expr ":" expr;

log_or = log_and, log_or_ap;
log_or_ap = "||", log_and, log_or_ap | none;

log_and = incl_or, log_and_ap;
log_and_ap = "&&", incl_or, log_and_ap | none;

incl_or = excl_or, incl_or_ap;
incl_or_ap = "|", excl_or, incl_or_ap | none;

excl_or = and, excl_or_ap;
excl_or_ap = "^", and, excl_or_ap | none;

and = eq, and_ap;
and_ap = "&", eq, and_ap | none;

eq = rel, eq_ap;
eq_ap = ("==" | "!="), rel, eq_ap | none;

rel = shift, rel_ap;
rel_ap = ("<" | "<=" | ">" | ">="), shift, rel_ap | none;

shift = add, shift_ap;
shift_ap = ("<<" | ">>"), add, shift_ap | none;

add = mult, add_ap;
add_ap = ("+" | "-"), mult, add_ap | none;

mult = unary, mult_ap;
mult_ap = ("*" | "/" | "%"), unary, mult_ap | none;

unary = postfix | ("+" | "-" | "!" | "~" | "++" | "--"), unary;

postfix = primary | postfix, ("--" | "++");

postfix = primary, postfix_ap;
postfix_ap = ("--" | "++"), postfix_ap | none;

primary = number
   | string
   | bool
   | var_or_call
   | parentheses;

var_or_call = id, [fn_call];
parentheses = "(", expr, ")";
fn_call = "(", [arg_list], ")";
